--- a/style.css
+++ b/style.css
@@ -75,6 +75,11 @@ body{
     display: block;
 }
 
+/*Menubar*/
+.navbar__s4{
+    display: none;
+}
+
 .categories{
     display: flex;
     padding: 10px;
@@ -143,7 +148,9 @@ body{
 }
 
 .course-card{
-    width: 250px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
     
 }
 
@@ -201,4 +208,30 @@ body{
     justify-content: space-between;  
     margin: 20px;
     align-items: center;  
+}
+
+/*Media Queries*/
+
+@media screen and (max-width: 800px) {
+    body{
+        font-size: 10px;    
+    }   
+}
+
+@media screen and (max-width: 600px) {
+    .course-card{
+        flex-basis: 40%;
+    } 
+    
+    .categories{
+        display: none;
+    }
+
+    .navbar__s2, .navbar__s3{
+        display: none;
+    }
+
+    .navbar__s4{
+        display: block;
+    }
 }
